--- a/secao27/HelloWorldFx/src/helloworldfx/helloworldfx.fxml
+++ b/secao27/HelloWorldFx/src/helloworldfx/helloworldfx.fxml
@@ -3,10 +3,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="helloworldfx.Controller">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="helloworldfx.Controller">
     <children>
-        <Label fx:id="label" text="Label" />
+        <Label fx:id="label" text="Rotulo - GPAS 2026" />
     </children>
 </StackPane>
-
